// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConvertSceneModal > should call convertAllNodesToEntities and convert scene successfully 1`] = `
<div>
  <div
    class="sc-aXZVg eWvTss"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Convert scene
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{"bottom":"s"}"
      >
        <div
          data-mocked="Button"
          data-testid="ok-button"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      data-mocked="Alert"
      header="Convert to entities successful"
      type="success"
    >
      All nodes have been converted successfully
    </div>
  </div>
</div>
`;

exports[`ConvertSceneModal > should call prepareWorkspace when converting scene 1`] = `
<div>
  <div
    class="sc-aXZVg eWvTss"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Convert scene
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{"bottom":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
          direction="horizontal"
        >
          <div
            data-mocked="Button"
            data-testid="cancel-button"
          >
            Cancel
          </div>
          <div
            data-mocked="Button"
            data-testid="confirm-button"
            disabled=""
            variant="primary"
          >
            Confirm
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gEvEer eTOZLh"
      data-mocked="Container"
      data-testid="progress-container"
    >
      <div
        data-mocked="ProgressBar"
        label="Converting nodes"
        status="in-progress"
        value="0"
      >
        <div>
          <div
            class="sc-eqUAAy eNExrC"
            data-mocked="Box"
          >
            0 out of 2 converted
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertSceneModal > should render with converting scene failure 1`] = `
<div>
  <div
    class="sc-aXZVg eWvTss"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Convert scene
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{"bottom":"s"}"
      >
        <div
          data-mocked="Button"
          data-testid="ok-button"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      data-mocked="Alert"
      header="Convert to entities failed"
      type="error"
    >
      <div
        data-mocked="Box"
      >
        Some node conversion failed:
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"s"}"
      >
        failure-node
         (
        convert failed
        )
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertSceneModal > should render with correct confirmation view 1`] = `
<div>
  <div
    class="sc-aXZVg eWvTss"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Convert scene
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{"bottom":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
          direction="horizontal"
        >
          <div
            data-mocked="Button"
            data-testid="cancel-button"
          >
            Cancel
          </div>
          <div
            data-mocked="Button"
            data-testid="confirm-button"
            variant="primary"
          >
            Confirm
          </div>
        </div>
      </div>
    </div>
    <div
      data-mocked="Alert"
      header="Converting scene"
      type="warning"
    >
      Proceeding with this action will permanently change your scene. You cannot undo this action
    </div>
  </div>
</div>
`;

exports[`ConvertSceneModal > should render with preparing workspace failure 1`] = `
<div>
  <div
    class="sc-aXZVg eWvTss"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Convert scene
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{"bottom":"s"}"
      >
        <div
          data-mocked="Button"
          data-testid="ok-button"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      data-mocked="Alert"
      header="Convert to entities failed"
      type="error"
    >
      <div
        data-mocked="Box"
      >
        prepare workspace error
      </div>
    </div>
  </div>
</div>
`;
